Added some comments.

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,8 @@
 
     <!--This section right here is the client side socket-->
     <script src="/socket.io/socket.io.js"></script>
+
+    <!--Importing jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
@@ -22,6 +24,6 @@
       </div>
   </div>
   </body>
-  <!--the socket script has to be after the form is declared-->
+  <!--the socket script has to be AFTER the form is declared-->
   <script src="../js/socket.js"></script>
 </html>
