--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <title>Chatm</title>
-    <link rel="stylesheet" type="text/css" href="../css/mystyle.css">
+    <!--Import Google Icon Font-->
+      <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Compiled and minified CSS -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="../css/mystyle.css"> -->
 
     <!--This section right here is the client side socket-->
     <script src="/socket.io/socket.io.js"></script>
@@ -15,9 +22,19 @@
       <div id="chat">
         <h1>Chatm</h1>
         <ul id="messages"></ul>
-        <form action="">
-          <input id="m" autocomplete="off" autofocus="true" /><button>Send</button>
-        </form>
+      <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="m" type="text">
+                <label for="m">Message</label>
+                <button class="btn waves-effect waves-light" type="submit" name="action">
+                  <i class="material-icons">send</i>
+              </button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
       <div id="webm">
         <h1>Webm</h1>
