--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,19 +3,17 @@
   <head>
     <title>Chatm</title>
     <!--Import Google Icon Font-->
-      <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- Compiled and minified CSS -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="../css/mystyle.css"> -->
-
-    <!--This section right here is the client side socket-->
-    <script src="/socket.io/socket.io.js"></script>
-
+    <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <!-- App styles  -->
+    <link rel="stylesheet" type="text/css" href="../css/mystyle.css">
     <!--Importing jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <!--This section right here is the client side socket-->
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <div id="container">
@@ -25,11 +23,13 @@
       <div class="row">
           <form class="col s12">
             <div class="row">
-              <div class="input-field col s6">
+              <div class="input-field col s5">
                 <input id="m" type="text">
                 <label for="m">Message</label>
-                <button class="btn waves-effect waves-light" type="submit" name="action">
-                  <i class="material-icons">send</i>
+              </div>
+              <div class="input-field col s3">
+              <button class="btn waves-effect waves-light" type="submit" name="action">
+                <i class="material-icons">send</i>
               </button>
               </div>
             </div>
