--- a/public/html/index.html
+++ b/public/html/index.html
@@ -22,7 +22,7 @@
         <a href="/" class="brand-logo">Chatm</a>
         <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Log Out</a></li>
+          <li><a id="logOut" href="#">Log Out</a></li>
         </ul>
         <ul class="side-nav" id="mobile-nav">
           <li><a href="#">Log Out</a></li>
@@ -56,11 +56,11 @@
       <div class="row">
           <form id="chatbox" class="col s12">
             <div class="row">
-              <div class="input-field col s5">
+              <div class="input-field col s6">
                 <input id="m" type="text">
                 <label for="m">Message</label>
               </div>
-              <div class="input-field col s3">
+              <div class="input-field col s1 offset-s4">
               <button class="btn waves-effect waves-light" type="submit" name="action">
                 <i class="material-icons">send</i>
               </button>
